--- a/Register/public/index.html
+++ b/Register/public/index.html
@@ -1,1 +1,38 @@
-<html></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>AwesomeWebsite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+        crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="main.js"></script>
+</head>
+
+<body>
+    <h2 class="h2">AwesomeWebsite</h2>
+    <form id="form">
+        <div class="form-group">
+            <label for="exampleInputEmail1">User name</label>
+            <input type="txt" class="form-control" id="userId" name="user" aria-describedby="emailHelp" placeholder="Enter user name">
+            <p id = "userHelp" ></p>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="emailId" name = "email" aria-describedby="emailHelp" placeholder="Enter email">
+            <p id = "emailHelp" ></p>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="checkboxId" name = "checkbox" >
+            <label class="form-check-label" for="exampleCheck1">I agree to sell my soul</label>
+        </div>
+        <p id = "checkboxHelp" ></p>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</body>
+
+</html>
