--- a/shoesGames/public/index.html
+++ b/shoesGames/public/index.html
@@ -18,7 +18,7 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">SSSC</h5>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-dark" href="#">Home</a>
-      <a class="p-2 text-dark" href="./html/shopping.html">Shop</a>
+      <a class="p-2 text-dark" href="/shop">Shop</a>
       <a class="p-2 text-dark" href="#">Sign in</a>
     </nav>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
